# my-ddns-update

./: .env.template  .gitignore  LICENSE  README.md  config.py  main.py  main.sh.sample  pyproject.toml
myddnsupdate/: __init__.py
myglobalip/: __init__.py
